# Neural-Augmented-Multi-Indicator-Trading-Engine

./: CMakeLists.txt  README.md  bindings.pyd
data/: AAPL_testing.csv  AAPL_training.csv
models/: nn_model_weights.pth
src/cpp/: CMakeLists.txt  bindings.cpp  data_types.h  macd_strategy.cpp  macd_strategy.h  rsi_strategy.cpp  rsi_strategy.h  supertrend_strategy.cpp  supertrend_strategy.h
src/python/: data_processor.py  model.py  test.py  train.py
